syntax = "proto2";
package dhc;

//using datetime
//using index username 8
//using auto id

message log_t {
    optional string username                = 1;
    optional int32 serverid                 = 3;
    optional uint64 player_guid             = 4;
    optional int32 log_tp                   = 5;

    optional int32 tp                       = 6;
    optional int32 value1                   = 7;
    optional int32 value2                   = 8;
    optional int32 value3                   = 9;
    optional int32 way                      = 10;
    optional int32 op                       = 11;
}